# rust_lemmatizer

./: Cargo.toml  README.md  lemmas.csv  lib.rs
