[package]
name = "rust_lemmatizer"
version = "0.1.0"
edition = "2021"
authors = ["Ian Goodale"]
description = "A lemmatizing package for use with a .csv dictionary of lemmas and their corresponding words."
readme = "README.md"
repository = "https://github.com/ian-nai/rust_lemmatizer"
license = "GPL-3.0-or-later"
keywords = ["NLP", "lemmatization"]
categories = ["text-processing"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_lemmatizer"
path = "src/lib.rs"

[[bin]]
name = "get_lemmas"
path = "src/bin/get_lemmas.rs"

[dependencies]
csv = "1.1"
